terraform/1-vpc.tf
resource "aws_vpc" "this" {
  cidr_block                       = "10.0.0.0/16"
  enable_dns_support               = true
  enable_dns_hostnames             = true
  assign_generated_ipv6_cidr_block = true

  tags = {
    Name = "digonto-vpc"
  }
}
